# my-renderer

./: .gitignore  CMakeLists.txt  README.md  clean.sh  output.tga
include/: geometry.h
lib/shaders/include/: gouraud_shader.h  ishader.h
lib/shaders/src/: gouraud_shader.cc  ishader.cc
src/: main.cc  main.cpp
unused/: chap1.cc  geometry.h
